--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -6,11 +6,16 @@ html, body, #root, .app {
   width: 100%;
   height: 100%;
   font-family: 'Space Mono', monospace;
+  font-weight: lighter;
   color: white;
 }
 
 .app {
-  display: inline-block;
+  display: flex;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .Sidebar {
@@ -21,6 +26,36 @@ html, body, #root, .app {
   height: 100%;
   text-align: center;
   position: fixed;
+}
+
+#content {
+  background-image: url("./assets/images/monstera.jpg");
+  background-size: 100%;
+  background-repeat: repeat-y;
+  flex-grow: 1;
+  margin-left: 360px;
+  height: fit-content;
+}
+
+main {
+  backdrop-filter: blur(12px);
+  margin-top: -30px;
+  padding-bottom: 30px;
+  background-color: rgba(255, 255, 255, .5);
+  color: #262626;
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1460px){
+  #content {
+    margin-left: 25%;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  #content {
+    margin-left: 300px;
+    min-width: 500px;
+  }
 }
 
 #profile-picture {
@@ -44,8 +79,16 @@ div#container * {
   margin-right: auto;
 }
 
-h2 {
+h1, h2 {
   font-weight: lighter;
+}
+
+h1 {
+  font-size: 2.2em;
+}
+
+p {
+  font-size: 1.2em;
 }
 
 #code {
@@ -53,6 +96,12 @@ h2 {
   position: fixed;
   bottom: 20px;
   transform: translate(-50%, 0);
+}
+
+@media screen and (max-height: 600px) {
+  #code {
+    display: none;
+  }
 }
 
 .SidebarNav{
@@ -67,6 +116,7 @@ h2 {
   margin-bottom: 10px;
   position: relative;
   width: fit-content;
+  cursor: pointer;
 }
 
 .SidebarNavRow::before {
@@ -87,8 +137,26 @@ h2 {
   transform-origin: bottom left;
 }
 
-@media screen and (max-height: 600px) {
-  #code {
-    display: none;
-  }
+.AboutMe, .ContactMe, .More {
+  height: 100vh;
+}
+
+.Home {
+  padding-left: 12%;
+  height: 70vh;
+  padding-top: 30vh;
+  /* background-color: red; */
+}
+
+.AboutMe {
+  text-align: center;
+  /* background-color: blue; */
+}
+
+.ContactMe {
+  text-align: center;
+}
+
+.More {
+  text-align: center;
 }
