--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -87,7 +87,7 @@ h1 {
   font-size: 2.2em;
 }
 
-p {
+#Home, p {
   font-size: 1.2em;
 }
 
@@ -137,7 +137,7 @@ p {
   transform-origin: bottom left;
 }
 
-.AboutMe, .ContactMe, .More {
+.ContactMe, .More {
   height: 100vh;
 }
 
@@ -159,4 +159,50 @@ p {
 
 .More {
   text-align: center;
+}
+
+.AboutCard {
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0px 4px 10px 0px rgb(60, 60, 60);
+  backdrop-filter: blur(10px);
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 100px auto;
+  margin-bottom: 40px;
+  width: 50%;
+  min-width: 600px;
+  padding: 40px 25px;
+  position: relative;
+  top: 25%;
+  border-radius: 37px;
+  text-align: left;
+  line-height: 20px;
+}
+
+.AboutCardImage {
+  width: 100px;
+  padding-right: 12px;
+}
+
+.AboutCardHeader {
+  display: flex;
+}
+
+.AboutCardHeader h1 {
+  flex: 2;
+}
+
+.AboutCardHeader h2 {
+  flex: 2;
+}
+
+.AboutCard li {
+  line-height: 23px;
+  margin-bottom: 5px;
+}
+
+.bio {
+  width: 50%;
+  min-width: 600px;
+  margin: 100px auto;
 }
