--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -139,6 +139,7 @@ h1 {
 
 .ContactMe, .More {
   height: 100vh;
+  padding-top: 50px;
 }
 
 .Home {
@@ -150,6 +151,7 @@ h1 {
 
 .AboutMe {
   text-align: center;
+  padding-top: 50px;
   /* background-color: blue; */
 }
 
@@ -169,9 +171,9 @@ h1 {
   margin-right: auto; */
   margin: 100px auto;
   margin-bottom: 40px;
-  width: 50%;
+  width: 40%;
   min-width: 600px;
-  padding: 40px 25px;
+  padding: 30px 25px;
   position: relative;
   top: 25%;
   border-radius: 37px;
@@ -205,4 +207,34 @@ h1 {
   width: 50%;
   min-width: 600px;
   margin: 100px auto;
+}
+
+.ContactCard {
+  background-color: #262626bd;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(20);
+  text-align: left;
+  width: 450px;
+  margin: 100px auto;
+  padding: 30px 20px 40px 20px;
+  line-height: 12px;
+  font-size: .9em;
+  color: white;
+  margin-top: 30vh;
+}
+
+.ContactCard img {
+  width: 75px;
+  border-radius: 100%;
+  border: 4px solid black;
+}
+
+.ResumeDownload {
+  text-decoration: none;
+  color: white;
+}
+
+.ResumeDownload:hover {
+  color: lightgray;
+  transition: .3s;
 }
