--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
+/* Desktop CSS | Bigger than 900 pixels */
+@media screen and (min-width: 900px) {
+
+.Profile {
+  display: none;
+}
+
 html, body, #root, .app {
   margin: 0;
   padding: 0;
@@ -16,6 +23,10 @@ html, body, #root, .app {
 
 html {
   scroll-behavior: smooth;
+}
+
+.ToggleNav {
+  display: none;
 }
 
 .Sidebar {
@@ -237,4 +248,158 @@ h1 {
 .ResumeDownload:hover {
   color: lightgray;
   transition: .3s;
+}
+
+}
+
+/* Tablet CSS | Between 500 and 900 pixels */
+@media screen and (min-width: 500px) and (max-width: 900px) {
+
+html, body, #root, .app {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Space Mono', monospace;
+  font-weight: lighter;
+  color: white;
+}
+
+.Sidebar {
+  display: none;
+}
+
+.ToggleNav * {
+  background-color: red;
+  margin: 0;
+}
+
+
+}
+
+/* Phone CSS | Smaller than 500 pixels */
+@media screen and (max-width: 500px) {
+  
+  .Sidebar {
+    display: none;
+  }
+
+  html, body, #root, .app {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    font-family: 'Space Mono', monospace;
+    font-weight: lighter;
+    color: white;
+    text-align: center;
+  }
+
+  main {
+    backdrop-filter: blur(10px);
+    margin-top: -30px;
+    padding-bottom: 30px;
+    background-color: rgba(255, 255, 255, .6);
+    color: #262626;
+  }
+
+  .Home, .ContactMe, .More {
+    height: 100vh;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+    background-color: red;
+  }
+
+  #content {
+    background-image: url("./assets/images/monstera.jpg");
+    background-size: 100%;
+    background-repeat: repeat-y;
+    height: fit-content;
+  }
+
+  
+  .ToggleNav {
+    position: fixed;
+    top: 0;
+    background-color: #262626;
+    height: 10vh;
+    width: 100%;
+    margin: 0;
+  }
+
+  .AboutCard {
+    background-color: rgba(255, 255, 255, 0.01);
+    box-shadow: 0px 4px 10px 0px rgb(60, 60, 60);
+    backdrop-filter: blur(10px);
+    border-radius: 37px;
+    color: #262626;
+    text-align: center;
+    margin: 40px 6%;
+    padding: 10px;
+    line-height: 20px;
+  }
+  
+  .AboutCardImage {
+    width: 80px;
+  }
+  
+  .AboutCard li {
+    line-height: 20px;
+    margin-bottom: 10px;
+    text-align: left;
+  }
+
+  .AboutCard h1, h2 {
+    line-height: 30px;
+  }
+
+  .ContactCard {
+    background-color: #262626bd;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(20);
+    text-align: left;
+    margin: 100px auto;
+    padding: 30px 20px 40px 20px;
+    line-height: 12px;
+    font-size: .9em;
+    color: white;
+    margin-top: 30vh;
+  }
+  
+  .ContactCard img {
+    width: 75px;
+    border-radius: 100%;
+    border: 4px solid black;
+  }
+
+  .Profile #main-profile-picture {
+    width: 70%;
+    border-radius: 100%;
+    box-shadow: 0px 0px 10px #262626;
+    margin-top: 15vh;
+  }
+  
+  div#container * {
+    width: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    filter:opacity(.9)
+  }
+
+  .HomeText h1 {
+    display: none;
+  }
+
+  .HomeText p {
+    font-size: 28px;
+  }
+
+  .AboutMe p {
+    font-size: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
 }
