--- a/src/App.css
+++ b/src/App.css
@@ -286,21 +286,31 @@ html, body, #root, .app {
 
   html, body, #root, .app {
     margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
     font-family: 'Space Mono', monospace;
     font-weight: lighter;
     color: white;
     text-align: center;
+    scroll-behavior: smooth;
   }
 
   main {
+    margin: 0;
     backdrop-filter: blur(10px);
     margin-top: -30px;
     padding-bottom: 30px;
     background-color: rgba(255, 255, 255, .6);
     color: #262626;
+  }
+
+  .ToggleNav {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    background-color: #262626;
+    height: 90px;
+    width: 100%;
+    text-align: right;
   }
 
   .Home, .ContactMe, .More {
@@ -309,7 +319,10 @@ html, body, #root, .app {
     margin-bottom: 10px;
     margin-left: 40px;
     margin-right: 40px;
-    background-color: red;
+  }
+
+  .AboutMe {
+    padding-top: 10px;
   }
 
   #content {
@@ -319,14 +332,13 @@ html, body, #root, .app {
     height: fit-content;
   }
 
-  
-  .ToggleNav {
-    position: fixed;
-    top: 0;
-    background-color: #262626;
-    height: 10vh;
-    width: 100%;
-    margin: 0;
+  .ToggleNav button {
+    background-color: rgba(255, 255, 255, 0);
+    color: white;
+    font-size: 3em;
+    border: none;
+    margin-top: 30px;
+    margin-right: 20px;
   }
 
   .AboutCard {
@@ -359,7 +371,6 @@ html, body, #root, .app {
     background-color: #262626bd;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(20);
-    text-align: left;
     margin: 100px auto;
     padding: 30px 20px 40px 20px;
     line-height: 12px;
@@ -385,7 +396,9 @@ html, body, #root, .app {
     width: 30px;
     margin-left: 10px;
     margin-right: 10px;
-    filter:opacity(.9)
+    filter:opacity(.9);
+    position: relative;
+    z-index: -1
   }
 
   .HomeText h1 {
@@ -400,6 +413,27 @@ html, body, #root, .app {
     font-size: 20px;
     margin-left: 30px;
     margin-right: 30px;
+  }
+
+  .Menu .-menu{
+    text-align: left;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    backdrop-filter: blur(50px);
+    margin-top: -3px;
+    padding-top: 10px;
+    height: 100vh;
+    z-index: 1;
+  }
+
+  .Menu li {
+    list-style: none;
+    font-size: 30px;
+    line-height: 50px;
+  }
+
+  .Menu .hidden-menu {
+    display: none;
   }
 
 }
