--- a/src/App.css
+++ b/src/App.css
@@ -275,7 +275,7 @@ html, body, #root, .app {
 } */
 
 
-}
+/* } */
 
 /* Phone CSS | Smaller than 500 pixels */
 @media screen and (max-width: 500px) {
