--- a/src/Components/Navigation/Sidebar/Sidebar.scss
+++ b/src/Components/Navigation/Sidebar/Sidebar.scss
@@ -43,12 +43,47 @@
         transform-origin: bottom left;
     }
 
+    #profile-picture {
+        width: 30%;
+        min-width: 200px;
+        max-width: 300px;
+        border-radius: 100%;
+        margin-top: 50px;
+    }
+
+    div#container {
+        display: flex;
+        margin-right: auto;
+        margin-left: auto;
+        width: 40%;
+    }
+    div#container * {
+        width: 30px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #code {
+        width: 60px;
+        position: fixed;
+        bottom: 20px;
+        transform: translate(-50%, 0);
+    }
 }
 
 @media screen and (max-width: 500px) {
   
   .Sidebar {
     display: none;
+  }
+  
+  div#container * {
+    width: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    filter:opacity(.9);
+    position: relative;
+    z-index: -1
   }
 
 }
