Added Bootstrap. Bootstrap Icons. Switched out icons on sidebar.

--- a/src/Components/Navigation/Sidebar/Sidebar.scss
+++ b/src/Components/Navigation/Sidebar/Sidebar.scss
@@ -63,11 +63,17 @@
         margin-right: auto;
     }
 
-    #code {
-        width: 60px;
+    .code {
+        color: white;
+        font-size: 2em;
         position: fixed;
         bottom: 20px;
         transform: translate(-50%, 0);
+    }
+
+    .bi {
+        color: white;
+        font-size: 1.75em;
     }
 }
 
