--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@
   }
 }
 
-/* @media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
 
   html, body, #root, .app {
     margin: 0;
@@ -58,5 +58,5 @@
   .Menu .hidden-menu {
     display: none;
   }
-
-} */
+  
+}
