--- a/src/Pages/Portfolio/portfolio.scss
+++ b/src/Pages/Portfolio/portfolio.scss
@@ -20,6 +20,12 @@
     transition: .3s;
     }
 
+    .cards {
+        display: flex;
+        width: auto;
+        flex-wrap: wrap;
+    }
+
 }
 
 @media screen and (max-width: 500px) {
