--- a/src/Pages/Contact/contact.scss
+++ b/src/Pages/Contact/contact.scss
@@ -1,7 +1,8 @@
 @media screen and (min-width: 500px) {
     .ContactMe {
-        height: 100vh;
-        padding-top: 50px;
+        height: auto;
+        min-height: 100vh;
+        padding-top: 30px;
         text-align: center;
     }
 }
