--- a/src/Pages/Portfolio/portfolio.scss
+++ b/src/Pages/Portfolio/portfolio.scss
@@ -1,13 +1,9 @@
 @media screen and (min-width: 500px) {
-    .AboutMe {
+    .portfolio {
         text-align: center;
-        padding-top: 50px;
-    }
-
-    .bio {
-        width: 50%;
-        min-width: 600px;
-        margin: 100px auto;
+        height: auto;
+        min-height: 100vh;
+        padding-top: 30px;
     }
     
     .ResumeDownload {
@@ -16,24 +12,60 @@
     }
       
     .ResumeDownload:hover {
-    color: lightgray;
-    transition: .3s;
+        color: lightgray;
+        transition: .3s;
     }
 
     .cards {
+        justify-content: center;
         display: flex;
-        width: auto;
         flex-wrap: wrap;
+        width: 100%;
+    }
+    
+    .rightarrow {
+        font-size: 1.1em;
+        position: relative;
+        top: 2px
     }
 
+    .projectarchive {
+        width: auto;
+        height: 55px;
+        display: inline-block;
+        vertical-align: auto;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 20px;
+        position: relative;
+        top: 5%;
+    }
+
+    .projectarchive::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        transform: scaleX(0);
+        height: 3px;
+        bottom: -1px;
+        left: 0;
+        background-color: white;
+        transform-origin: bottom center;
+        transition: .3s;
+    }
+    
+    .projectarchive:hover::before {
+        transform: scaleX(1);
+        transform-origin: bottom center;
+    }
 }
 
 @media screen and (max-width: 500px) {
-    .AboutMe {
+    .portfolio {
         padding-top: 30px;
     }
 
-    .AboutMe p {
+    .portfolio p {
         font-size: 20px;
         margin-left: 30px;
         margin-right: 30px;
