--- a/src/Components/ContactCard/contactcard.scss
+++ b/src/Components/ContactCard/contactcard.scss
@@ -2,21 +2,35 @@
     .ContactCard {
         background-color: #262626bd;
         box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
-        backdrop-filter: blur(20);
         text-align: left;
-        width: 450px;
-        margin: 100px auto;
+        width: 50%;
+        margin: 30px auto;
         padding: 30px 20px 40px 20px;
-        line-height: 12px;
-        font-size: .9em;
         color: white;
-        margin-top: 30vh;
       }
       
       .ContactCard img {
         width: 75px;
         border-radius: 100%;
         border: 4px solid black;
+      }
+
+      .contactRow {
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: 1.2em;
+      }
+
+      .contactRow * {
+        transition: .3s;
+      }
+
+      .contactRow *:hover {
+        color: gray;
+      }
+
+      .contactList {
+        list-style-type: none;
       }
 }
 
