--- a/src/Components/Navigation/Sidebar/Sidebar.scss
+++ b/src/Components/Navigation/Sidebar/Sidebar.scss
@@ -57,6 +57,7 @@
         margin-left: auto;
         width: 40%;
     }
+
     div#container * {
         width: 30px;
         margin-left: auto;
@@ -74,6 +75,12 @@
     .bi {
         color: white;
         font-size: 1.75em;
+        transition: .3s;
+        
+    }
+
+    .bi:hover {
+        color: gray;
     }
 }
 
