--- a/src/Components/AboutCard/aboutcard.scss
+++ b/src/Components/AboutCard/aboutcard.scss
@@ -39,29 +39,29 @@
 }
 
 @media screen and (max-width: 500px) {
-    .AboutCard {
-        background-color: rgba(255, 255, 255, 0.01);
-        box-shadow: 0px 4px 10px 0px rgb(60, 60, 60);
-        backdrop-filter: blur(10px);
-        border-radius: 37px;
-        color: #262626;
-        text-align: center;
-        margin: 40px 6%;
-        padding: 10px;
-        line-height: 20px;
-      }
+    // .AboutCard {
+    //     background-color: rgba(255, 255, 255, 0.01);
+    //     box-shadow: 0px 4px 10px 0px rgb(60, 60, 60);
+    //     backdrop-filter: blur(10px);
+    //     border-radius: 37px;
+    //     color: #262626;
+    //     text-align: center;
+    //     margin: 40px 6%;
+    //     padding: 10px;
+    //     line-height: 20px;
+    //   }
       
-      .AboutCardImage {
-        width: 80px;
-      }
+    //   .AboutCardImage {
+    //     width: 80px;
+    //   }
       
-      .AboutCard li {
-        line-height: 20px;
-        margin-bottom: 10px;
-        text-align: left;
-      }
+    //   .AboutCard li {
+    //     line-height: 20px;
+    //     margin-bottom: 10px;
+    //     text-align: left;
+    //   }
     
-      .AboutCard h1, h2 {
-        line-height: 30px;
-      }    
+    //   .AboutCard h1, h2 {
+    //     line-height: 30px;
+    //   }    
 }
