--- a/src/Components/ContactCard/contactcard.scss
+++ b/src/Components/ContactCard/contactcard.scss
@@ -1,12 +1,12 @@
 @media screen and (min-width: 500px) {
     .ContactCard {
-        background-color: #262626bd;
         box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
         text-align: left;
         width: 50%;
+        min-width: 400px;
+        max-width: 500px;
         margin: 30px auto;
         padding: 30px 20px 40px 20px;
-        color: white;
       }
       
       .ContactCard img {
@@ -23,6 +23,7 @@
 
       .contactRow * {
         transition: .3s;
+        color: var(--color-foreground);
       }
 
       .contactRow *:hover {
@@ -35,21 +36,34 @@
 }
 
 @media screen and (max-width: 500px) {
-    .ContactCard {
-        background-color: #262626bd;
-        box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
-        backdrop-filter: blur(20);
-        margin: 100px auto;
-        padding: 30px 20px 40px 20px;
-        line-height: 12px;
-        font-size: .9em;
-        color: white;
-        margin-top: 30vh;
-      }
-      
-      .ContactCard img {
-        width: 75px;
-        border-radius: 100%;
-        border: 4px solid black;
-      }
+  .ContactCard {
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.25);
+    text-align: left;
+    padding: 30px 20px 40px 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .contactRow {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 1em;
+  }
+
+  .contactRow * {
+    transition: .3s;
+    color: var(--color-foreground);
+  }
+
+  .contactRow *:hover {
+    color: gray;
+  }
+
+  .contactList {
+    list-style-type: none;
+  }
+  
+  .contactcardtext {
+    display: none;
+  }
 }
