--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -1,14 +1,14 @@
 @media screen and (min-width: 500px) {
     .main {
         margin-top: -30px;
-        color: white;
         flex: 1;
     }
 }
 
 @media screen and (max-width: 500px) {
     .main {
-        background-size: 100%;
-        height: fit-content;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;        
     }
 }
