--- a/src/Components/Navigation/ToggleNav/togglenav.scss
+++ b/src/Components/Navigation/ToggleNav/togglenav.scss
@@ -10,19 +10,63 @@
         left: 0;
         right: 0;
         top: 0;
-        background-color: #262626;
-        height: 7vh;
-        width: 100%;
+        background-color: var(--color-foreground);
+        height: auto;
         text-align: right;
       }
 
       .ToggleNav button {
-        background-color: rgba(255, 255, 255, 0);
-        color: white;
-        font-size: 3em;
+        background-color: var(--color-foreground);
+        color: var(--color-background);
+        font-size: 2em;
         border: none;
-        position: relative;
-        left: 30px;
-        bottom: 10px;
+        padding: 7px;
       }
+
+      .menu-hidden {
+        display: none;
+      }
+
+      .menu {
+        background-color: var(--color-foreground);
+        color: var(--color-background);
+        text-align: left;
+        transition: 4s;
+      }
+
+      .menu::after {
+        transition: 3s;
+      }
+
+      .menu ul {
+        list-style: none;
+        margin: 0;
+        margin-bottom: 20px;
+      }
+
+      .menu ul li {
+        margin: 10px auto;
+      }
+
+      // .Menu .-menu{
+      //   text-align: left;
+      //   width: 100%;
+      //   background-color: rgba(255, 255, 255, 0.6);
+      //   backdrop-filter: blur(50px);
+      //   margin-top: -6px;
+      //   padding-top: 10px;
+      //   height: 100vh;
+      //   z-index: 1;
+      // }
+    
+      // .Menu li {
+      //   list-style: none;
+      //   font-size: 30px;
+      //   line-height: 50px;
+      // }
+    
+      // .Menu .hidden-menu {
+      //   display: none;
+      // }
+
 }
