--- a/src/Components/Profile/profile.scss
+++ b/src/Components/Profile/profile.scss
@@ -6,9 +6,32 @@
 
 @media screen and (max-width: 500px) {
     .Profile #main-profile-picture {
-        width: 70%;
+        width: 50%;
         border-radius: 100%;
         box-shadow: 0px 0px 10px #262626;
-        margin-top: 15vh;
+        margin-top: 10vh;
+    }
+
+    .Profile {
+        // background-color: red;
+        width: 100%;
+        // height: 100vh;
+    }
+
+    // .Profile {
+    //     background-color: red;
+    //     width: 100vw;
+    //     height: 100vh;
+    // }
+
+    #iconcontainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .pi {
+        color: var(--color-foreground);
+        font-size: 1.5em;
     }
 }
