--- a/src/Components/SectionTitle/sectiontitle.scss
+++ b/src/Components/SectionTitle/sectiontitle.scss
@@ -4,7 +4,7 @@
     text-align: center;
 }
 
-h4 {
+h4.sectionHeaderText {
     border: 2px solid;
     border-radius: 100px;
     display: inline-block;
