--- a/src/Pages/Contact/contact.scss
+++ b/src/Pages/Contact/contact.scss
@@ -10,9 +10,10 @@
 @media screen and (max-width: 500px) {
     .ContactMe {
         height: 100vh;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
         padding-top: 30px;
         margin-bottom: 10px;
-        margin-left: 40px;
-        margin-right: 40px;
     }
 }
