--- a/src/Pages/Home/home.scss
+++ b/src/Pages/Home/home.scss
@@ -23,13 +23,14 @@
         margin-bottom: 10px;
         margin-left: 40px;
         margin-right: 40px;
+        // background-color: green;
     }
 
-    .HomeText h1 {
-        display: none;
-      }
+    // .HomeText h1 {
+    //     display: none;
+    //   }
     
-    .HomeText p {
-        font-size: 28px;
-    }
+    // .HomeText p {
+    //     font-size: 28px;
+    // }
 }
