--- a/src/index.scss
+++ b/src/index.scss
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 480px) {
   
   body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: auto;
-    font-family: 'Space Mono', monospace;
+    font-family: 'Space Mono', 'Arial';
     font-weight: lighter;
-    color: white;
-    background-color: #262626;
+    background-color: var(--color-background);
+    color: var(--color-foreground);
   }
 
   .app {
@@ -20,43 +20,31 @@
     margin-left: auto;
     margin-right: auto;
   }
-  
-  html {
+
+}
+
+@media screen and (max-width: 480px) {
+
+  body {
+    margin: 0;
+    font-family: 'Arial';
+    color: var(--color-foreground);
+    text-align: center;
     scroll-behavior: smooth;
+    background-color: var(--color-background);
+    
   }
 
 }
 
-@media screen and (max-width: 500px) {
+body {
+  --color-background: #fafafa;
+  --color-foreground: #262626;
+  transition: .5s;
+}
 
-  html, body, #root, .app {
-    margin: 0;
-    font-family: 'Space Mono', monospace;
-    font-weight: lighter;
-    color: white;
-    text-align: center;
-    scroll-behavior: smooth;
-  }
-
-  .Menu .-menu{
-    text-align: left;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.6);
-    backdrop-filter: blur(50px);
-    margin-top: -6px;
-    padding-top: 10px;
-    height: 100vh;
-    z-index: 1;
-  }
-
-  .Menu li {
-    list-style: none;
-    font-size: 30px;
-    line-height: 50px;
-  }
-
-  .Menu .hidden-menu {
-    display: none;
-  }
-  
+body.dark {
+  --color-background: #262626;
+  --color-foreground: #fafafa;
+  transition: .5s;
 }
